2018-11-06 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.14.3

2018-11-04 Treeve Jelbert <treeve@sourcemage.org>
	* plasma.sh: fix qt dirs

2018-10-23 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.14.2

2018-10-16 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.14.1

2018-10-09 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: tweak

2018-10-09 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.14.0

2018-09-04 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.13.5

2018-07-31 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.13.4

2018-07-10 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.13.3

2018-06-26 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.13.2

2018-06-19 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.13.1

2018-06-12 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.13.0
	* PRE_BUILD pathces/*: deleted, no longer apply

2018-06-11 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: tweak

2018-05-02 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.12.5

2018-03-27 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.12.4

2018-03-06 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.12.3

2018-02-21 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.12.2

2018-02-14 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.12.1

2018-02-126 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: SECURITY_PATCH++, fixes CVE-2018-6791

2018-02-06 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.12.0
	* PRE_BUILD patches.*: added, make jsembed optional

2018-02-06 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: tweak

2018-01-03 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.11.5

2017-11-29 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.11.4

2017-11-07 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.11.3
