@@ -1,5 +1,6 @@
 2018-11-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.14.3
+	* plasma.sh: improve
 
 2018-11-04 Treeve Jelbert <treeve@sourcemage.org>
 	* plasma.sh: fix qt dirs
